fix: uneven padding

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex: 1;
-    padding: 32px 0px;
+    padding-top: 32px;
 }
 
 ul {
